--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^16.7.13",
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
+    "all": "^0.0.0",
     "autoprefixer": "^10.4.2",
     "clsx": "^1.1.1",
     "postcss": "^8.4.5",
